Fixes button mobile issues

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -66,6 +66,7 @@ body{
 
 .input-button {
   color: white;
+  font-size: 20px;
   border: none;
   width: 50px;
   border-radius: 0 5px 5px 0;
